fix spacing

--- a/site/app/view/footer.styl
+++ b/site/app/view/footer.styl
@@ -11,3 +11,6 @@
     li.twitter
       iframe
         width       90px !important
+
+  .fa:before
+    margin-right  0.5em
